--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "body-parser": "^1.20.2",
     "express": "^4.18.2",
+    "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1"
   }
 }
