--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
 PORT=5000
-CONNECTION_URL=mongodb://127.0.0.1:27017/Ertir
-TOKEN_KEY=!@51#$1331%^
+CONNECTION_URL=mongodb://127.0.0.1:27017/pikir
+TOKEN_KEY=!@51#$13ja31%^
