--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
 PORT=5000
 CONNECTION_URL=mongodb://127.0.0.1:27017/pikir
-TOKEN_KEY=!@51#$13ja31%^
+TOKEN_KEY_ADMIN=Yandex!1331++@
+TOKEN_KEY_USER=!@51#$13ja31%^
