--- a/.env
+++ b/.env
@@ -1,4 +1,7 @@
 PORT=5000
-CONNECTION_URL=mongodb://127.0.0.1:27017/pikir
+CONNECTION_URL=mongodb://127.0.0.1:27017/techno-commerce
 TOKEN_KEY_ADMIN=Yandex!1331++@
 TOKEN_KEY_USER=!@51#$13ja31%^
+ADMIN_USERNAME=admin@gmail.com
+ADMIN_PASSWORD=admin
+BASE_URL=http://127.0.0.1:5000
